<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home_fragment"
            android:icon="@drawable/ic_home"
            android:title="@string/lastest" />
        <item
            android:id="@+id/nav_category_fragment"
            android:icon="@drawable/ic_file"
            android:title="@string/category" />
        <item
            android:id="@+id/nav_gift_fragment"
            android:icon="@drawable/ic_gift"
            android:title="@string/gifs" />
        <item
            android:id="@+id/nav_favorite_fragment"
            android:icon="@drawable/ic_heart"
            android:title="@string/my_favorites" />
        <item
            android:id="@+id/nav_rate_app"
            android:icon="@drawable/ic_rateapp"
            android:title="@string/rate_app" />
        <item
            android:id="@+id/nav_more_app"
            android:icon="@drawable/ic_more_app"
            android:title="@string/more_app" />
        <item
            android:id="@+id/nav_about_us_fragment"
            android:icon="@drawable/ic_about_us"
            android:title="@string/about_us" />
        <item
            android:id="@+id/nav_setting_fragment"
            android:icon="@drawable/ic_setting"
            android:title="@string/setting" />
        <item
            android:id="@+id/nav_privacy"
            android:icon="@drawable/ic_privacy"
            android:title="@string/privacy_police" />
    </group>
</menu>